--- a/Personal Porfolio.html
+++ b/Personal Porfolio.html
@@ -146,6 +146,19 @@ section(
 height:80px;
 margin: auto;
 )
+#header p(
+       font-size: 25 pt
+       color: orange
+       padding-top: 5px:
+       margin: 0;
+       font-weight: bold;
+       text-align: center;
+)
+selected(
+       background-color: f36f48;
+       font-weight:bold;
+       color: white;
+)
 form(
     text-align:center;
     margin-top: 0;
